# pycrab

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: pytest.yml
src/crab/: .clang-format  CMakeLists.txt  crab.c  crab.h  point.c  point.h
src/pycrab/: CMakeLists.txt  crab.pxd  pycrab.pyx
test/: pycrab.py  test_pycrab.py
